
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Mar-30 UPDATE  Jonas Diemer <diemer-at-gmx.de>
================================================================================
+eeschema
    EESchema displays a warning now on a file format mismatch.

2008-Mar-31 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+all
    Tweaked class MsgPanel so that the screen drawing only happens from
    its OnPaint() function.
+pcbnew
    Added virtual BOARD_ITEM::Draw() and forced all BOARD_ITEM derived classes
    to implement it so that all these functions are also virtual.
    Made the offset argument default to the new wxPoint BOARD_ITEM::ZeroOffset.
    Coded DRAWSEGMENT::Draw() from Trace_DrawSegmentPcb() and removed the latter.
    Coded EQUIPOT::Draw(), and BOARD::Draw().  Both are dummies for now, but
    both can be reasonably implemented in the future.


2008-Mar-30 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema
    Solved: eeschema crashes when create a new sheet, using the default filename and enter it.
    Solved: eeschema crashes when delete a sheet label (pin sheet), undo this and move the label.
    (bad value (not updated) for the DrawSheetLabelStruct.m_Parent member after redo command in sheet edit).

+all:
    Added comments in gestfich.cpp to explain the default paths used by kicad to find help files and lib files


2008-Mar-30 UPDATE  Jonas Diemer <diemer-at-gmx.de>
================================================================================
+eeschema
    Removed artifacts resulting from redraws in XOR-Mode.

2008-Mar-24 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew